just a fun line

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="text-line"><h2>About Me</h2></div>
             <div class="text-line"><p>Research Assistant at Laboratory for Laser Energetics (LLE), PhD in Chemical Engineering</p></div>
             <div class="text-line"><p>Currently slashing parasitic energy load in nuclear fusion systems</p></div>
-            <div class="text-line"><p>If you can't reach me, I'm likely crafting production processes that aim to drive efficiency and impact</p></div>
+            <div class="text-line"><p>Building production processes and having fun! Real life factorio!</p></div>
         </div>
     </section>
 
