--- a/index.html
+++ b/index.html
@@ -46,44 +46,6 @@
     </script>
 </head>
 <body>
-    <nav>
-        <div class="logo">
-            Rashad Ahmadov
-            <span>Fusing Atoms & Bits</span>
-        </div>
-        <div class="social-links">
-            <a href="https://x.com/rashad_ahmadov_" target="_blank" aria-label="X">
-                <i class="fab fa-x-twitter fa-xl"></i>
-            </a>
-            <a href="https://linkedin.com/in/rashadahmadov" target="_blank" aria-label="LinkedIn">
-                <i class="fab fa-linkedin fa-xl"></i>
-            </a>
-            <a href="#" id="contact-link" aria-label="Contact">
-                <i class="far fa-envelope fa-xl"></i>
-            </a>
-            <div class="hamburger-menu">
-                <div class="line"></div>
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
-        </div>
-    </nav>
-
-    <div class="nav-panel">
-        <div class="nav-content">
-            <div class="nav-close">
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
-            <div class="nav-links">
-                <a href="/projects/process-engineering.html" class="nav-link">Process Engineering</a>
-                <a href="/projects/electric-reactor.html" class="nav-link">Electric Reactor</a>
-                <a href="/projects/simulation.html" class="nav-link">Process Simulation</a>
-                <a href="/projects/optimization.html" class="nav-link">Optimization Projects</a>
-            </div>
-        </div>
-    </div>
-
     <section id="hero" class="hero-section">
         <div class="hero-content">
             <div class="text-line"><h1>Hey, welcome!</h1></div>
@@ -148,28 +110,7 @@
         </div>
     </div>
 
-    <div id="contact-modal" class="modal">
-        <div class="modal-content contact-modal">
-            <div class="nav-close modal-close">
-                <div class="line"></div>
-                <div class="line"></div>
-            </div>
-            <form action="https://formspree.io/f/xbllvowd" method="POST" id="contact-form">
-                <div class="form-group">
-                    <input type="text" name="name" required placeholder="Name">
-                </div>
-                <div class="form-group">
-                    <input type="email" name="email" required placeholder="Email">
-                </div>
-                <div class="form-group">
-                    <textarea name="message" required placeholder="Message" rows="5"></textarea>
-                </div>
-                <button type="submit" class="submit-btn">Send Message</button>
-            </form>
-        </div>
-    </div>
-
-    <script src="scripts/main.js"></script>
+    <script src="scripts/header-loader.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.0/dist/aos.js"></script>
     <script>
         AOS.init();
