making it simple

--- a/index.html
+++ b/index.html
@@ -19,14 +19,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="styles/animations.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.0/dist/aos.css">
-    <style>
-        :root {
-            --primary-color: #171a20;
-            --text-color: #fff;
-        }
-        body { margin: 0; background: var(--primary-color); }
-        .hero-section { min-height: 100vh; }
-    </style>
     <link rel="preload" href="styles/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link rel="stylesheet" href="styles/main.css"></noscript>
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -64,12 +56,11 @@
     <section id="maxims" style="
         background-color: #1a1a1a; 
         color: #ffffff; 
-        padding: 40px 20px; 
-        min-height: 50vh; 
+        min-height: 100vh; 
         display: flex; 
         align-items: center; 
         justify-content: center;
-        background-image: url('assets/imgs/chamber_icf.webp');
+        background-image: url('assets/imgs/fun.jpeg');
         background-size: cover;
         background-position: center;
         background-blend-mode: overlay;
@@ -80,22 +71,11 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(0, 0, 0, 0.42);
+            background: rgba(0, 0, 0, 0.50);
             z-index: 1;">
         </div>
-        <div class="content" style="max-width: 800px; margin: 0 auto; position: relative; z-index: 2;">
-            <div class="text-line"><h2>Non-exhaustive list of maxims</h2></div>
-            <div class="text-line">
-                <ul style="list-style-type: none; padding: 0; font-size: 1.2em; line-height: 1.8;">
-                    <li>- You can just do things [0]</li>
-                    <li>- Move fast, learn fast, deliver solutions</li>
-                    <li>- Never settle</li>
-                    <li>- Don't accept things as they are. Don't blindly comply. Question.</li>
-                    <li>- Leave better than you found</li>
-                    <li>- People around you matter a lot</li>
-                    <li>- You can just do things [1]</li>
-                </ul>
-            </div>
+        <div class="content" style="position: relative; z-index: 2;">
+            <div class="text-line"><h2 style="font-family: var(--font-family-headers);">Let's have a blast with energy!</h2></div>
         </div>
     </section>
 
